fix weapons GXT (by Yushae Raza)

--- a/en/scm-documentation/sa/weapons.html
+++ b/en/scm-documentation/sa/weapons.html
@@ -30,52 +30,52 @@
 
 <script>
 t="";const keys=[
-["Unarmed",0,"1",-1,1,"fist","UNARMED"],
-["Brass Knuckles",1,"brassknuckle",331,1,"BRASSKNUCKLEicon","BRASSKNUCKLE"],
-["Golf Club",2,"golfclub",333,2,"golfclubicon","GOLFCLUB"],
-["Night Stick",3,"nitestick",334,2,"nitestickicon","NIGHTSTICK"],
+["Unarmed",0,"1",-1,1,"fist","WEAP00"],
+["Brass Knuckles",1,"brassknuckle",331,1,"BRASSKNUCKLEicon","WEAP01"],
+["Golf Club",2,"golfclub",333,2,"golfclubicon","WEAP02"],
+["Night Stick",3,"nitestick",334,2,"nitestickicon","WEAP03"],
 ["Knife",4,"knifecur",335,2,"knifecuricon","KNIFE"],
-["Baseball Bat",5,"bat",336,2,"baticon","BASEBALLBAT"],
-["Shovel",6,"shovel",337,2,"shovelicon","SHOVEL"],
-["Pool cue",7,"poolcue",338,2,"poolcueicon","POOLCUE"],
+["Baseball Bat",5,"bat",336,2,"baticon","BASEBAT"],
+["Shovel",6,"shovel",337,2,"shovelicon","WEAP04"],
+["Pool cue",7,"poolcue",338,2,"poolcueicon","WEAP05"],
 ["Katana",8,"katana",339,2,"katanaicon","KATANA"], 
-["Chainsaw",9,"chnsaw",341,2,"chnsawicon","CHAINSAW"],
-["Purple Dildo",10,"gun_dildo1",321,11,"gun_dildo1icon","PURPLEDILDO"],
-["White Dildo",11,"gun_dildo2",322,11,"gun_dildo2icon","WHILEDILDO"],
-["Long White Dildo",12,"gun_vibe1",323,11,"gun_vibe1icon","LONGWHITEDILDO"],
-["White Dildo 2",13,"gun_vibe2",324,11,"gun_vibe2icon","WHILEDILDO2"],
-["Flowers",14,"flowera",325,11,"floweraicon","FLOWERS"],
-["Cane",15,"gun_cane",326,11,"gun_caneicon","CANE"],
-["Grenades",16,"grenade",342,9,"grenadeicon","GRANADE"],
-["Tear Gas",17,"teargas",343,9,"TearGasicon","TEARGAS"],
-["Molotovs",18,"molotovs",334,9,"molotovicon","MOLOTOV"],
-["Pistol",22,"colt45",346,3,"colt45icon","PISTOL"],
-["Silenced Pistol",23,"silenced",347,3,"silencedicon","SILENCED"],
-["Desert Eagle",24,"desert_eagle",348,3,"desert_eagleicon","DESERTEAGLE"],
-["Shotgun",25,"chromegun",349,4,"chromegunicon","SHOTGUN"],
-["Sawn Off Shotgun",26,"sawnoff",350,4,"sawnofficon","SAWNOFF"],
-["Combat Shotgun",27,"shotgspa",351,4,"shotgspaicon","COMBATSHOTGUN"],
-["Micro UZI",28,"micro_uzi",352,5,"micro_uziicon","MICROUZI"],
-["MP5",29,"mp5lng",353,5,"mp5lngicon","MP5"],
-["AK47",30,"ak47",355,6,"ak47icon","AK47"],
-["M4",31,"m4",356,6,"M4icon","M4"],
-["Tec9",32,"tec9",372,5,"tec9icon","TEC9"],
+["Chainsaw",9,"chnsaw",341,2,"chnsawicon","CHAINSA"],
+["Purple Dildo",10,"gun_dildo1",321,11,"gun_dildo1icon","WEAP07"],
+["White Dildo",11,"gun_dildo2",322,11,"gun_dildo2icon","WEAP06"],
+["Long White Dildo",12,"gun_vibe1",323,11,"gun_vibe1icon","WEAP09"],
+["White Dildo 2",13,"gun_vibe2",324,11,"gun_vibe2icon",""],
+["Flowers",14,"flowera",325,11,"floweraicon","WEAP10"],
+["Cane",15,"gun_cane",326,11,"gun_caneicon",""],
+["Grenades",16,"grenade",342,9,"grenadeicon","GRENADE"],
+["Tear Gas",17,"teargas",343,9,"TearGasicon","WEAP11"],
+["Molotovs",18,"molotovs",334,9,"molotovicon","WEAP12"],
+["Pistol",22,"colt45",346,3,"colt45icon","STWE001"],
+["Silenced Pistol",23,"silenced",347,3,"silencedicon","STWE002"],
+["Desert Eagle",24,"desert_eagle",348,3,"desert_eagleicon","STWE003"],
+["Shotgun",25,"chromegun",349,4,"chromegunicon","STWE004"],
+["Sawn Off Shotgun",26,"sawnoff",350,4,"sawnofficon","STWE005"],
+["Combat Shotgun",27,"shotgspa",351,4,"shotgspaicon","STWE006"],
+["Micro UZI",28,"micro_uzi",352,5,"micro_uziicon","UZI"],
+["MP5",29,"mp5lng",353,5,"mp5lngicon","STWE008"],
+["AK47",30,"ak47",355,6,"ak47icon","STWE009"],
+["M4",31,"m4",356,6,"M4icon","STWE010"],
+["Tec9",32,"tec9",372,5,"tec9icon","STWE011"],
 ["Rifle",33,"cuntgun",357,7,"cuntgunicon","RIFLE"],
-["Sniper Rifle",34,"sniper",358,7,"SNIPERicon","SNIPERRIFLE"],
-["RPG",35,"rocketla",359,8,"rocketlaicon","RPG"],
-["Missile Launcher",36,"heatseek",360,8,"heatseekicon","HEATSEEK"],
-["Flame Thrower",37,"flame",361,8,"flameicon","FLAMETHROWER"],
-["Minigun",38,"minigun",362,8,"minigunicon","MINIGUN"],
-["Sachet Charges",39,"satchel",363,9,"satchelicon","SACHETCHARGES"],
-["Detonator",40,"remote",364,13,"before long","DETONATOR"],
-["Spray Paint",41,"spraycan",365,10,"SPRAYCANicon","SPRAYCAN"],
-["Fire Extinguisher",42,"fire_ex",366,10,"fire_exicon","FIREEXTINGUISHER"],
-["Camera",43,"camera",367,10,"Cameraicon","CAMERA"],
-["Nightvision Goggles",44,"nvgoggles",368,12,"irgogglesicon","NIGHTGOGGLES"],
-["Thermal Goggles",45,"irgoggles",369,12,"irgogglesicon","THERMALGOGGLES"],
-["Parachute",46,"gun_para",371,12,"gun_paraIcon","PARACHUTE"],
-["Jetpack","-","jetpack",370,"-","jetpackicon","-"],
-["Cellphone","-","cellphone",330,"-","cellphoneicon","-"]
+["Sniper Rifle",34,"sniper",358,7,"SNIPERicon","SNIPER"],
+["Rocket Launcher",35,"rocketla",359,8,"rocketlaicon","ROCKET"],
+["Heat Seeking Rocket Launcher",36,"heatseek",360,8,"heatseekicon","ROCKHS"],
+["Flame Thrower",37,"flame",361,8,"flameicon","FLAMET"],
+["Minigun",38,"minigun",362,8,"minigunicon","MINIGU"],
+["Sachet Charges",39,"satchel",363,9,"satchelicon","WEAP25"],
+["Detonator",40,"remote",364,13,"bombicona","WEAP40"],
+["Spray Paint",41,"spraycan",365,10,"SPRAYCANicon","WEAP13"],
+["Fire Extinguisher",42,"fire_ex",366,10,"fire_exicon","WEAP14"],
+["Camera",43,"camera",367,10,"Cameraicon","WEAP15"],
+["Nightvision Goggles",44,"nvgoggles",368,12,"irgogglesicon","WEAP16"],
+["Thermal Goggles",45,"irgoggles",369,12,"irgogglesicon","WEAP17"],
+["Parachute",46,"gun_para",371,12,"gun_paraIcon","WEAP18"],
+["Jetpack","","jetpack",370,"","jetpackicon",""],
+["Cellphone","","cellphone",330,"","cellphoneicon",""]
 ].forEach(function(key){
 t+=
 "<tr>"+
