--- a/en/scm-documentation/sa/gangs.html
+++ b/en/scm-documentation/sa/gangs.html
@@ -16,52 +16,32 @@
 <table>
 <thead>
 <tr>
-<th>ID</th>
-<th>Name</th>
+<th>Name</th><th>ID</th><th>GXT</th>
 </tr>
 </thead>
-<tbody>
-<tr>
-<td>0</td>
-<td>Ballas</td>
-</tr>
-<tr>
-<td>1</td>
-<td>Grove Street Families</td>
-</tr>
-<tr>
-<td>2</td>
-<td>Los Santos Vagos</td>
-</tr>
-<tr>
-<td>3</td>
-<td>San Fierro Rifa</td>
-</tr>
-<tr>
-<td>4</td>
-<td>Da Nang Boys</td>
-</tr>
-<tr>
-<td>5</td>
-<td>Mafia</td>
-</tr>
-<tr>
-<td>6</td>
-<td>Mountain Cloud Triad</td>
-</tr>
-<tr>
-<td>7</td>
-<td>Varrio Los Aztecas</td>
-</tr>
-<tr>
-<td>8</td>
-<td>(unused)</td>
-</tr>
-<tr>
-<td>9</td>
-<td>(unused)</td>
-</tr>
-</tbody>
+<tbody></tbody>
 </table>
 
 <script src="../../../js/main.min.js"></script>
+<script>
+t="";const keys=[
+["Ballas",0,"ST_GNG0"],
+["Grove Street Families",1,"ST_GNG1"],
+["Los Santos Vagos",2,"ST_GNG2"],
+["San Fierro Rifa",3,"ST_GNG3"],
+["Da Nang Boys",4,"ST_GNG4"],
+["Mafia",5,"ST_GNG5"],
+["Mountain Cloud Triad",6,"ST_GNG6"],
+["Varrio Los Aztecas",7,"ST_GNG7"],
+["(unused)",8,"ST_GNG8"],
+["(unused)",9,"ST_GNG9"]
+].forEach(function(key, i){
+t+=
+"<tr>\
+<td>"+key[0]+"</td>\
+<td>"+key[1]+"</td>\
+<td>\""+key[2]+"\"</td>\
+</tr>"
+})
+$('tbody').innerHTML+=t
+</script>
