--- a/en/scm-documentation/sa/particles.html
+++ b/en/scm-documentation/sa/particles.html
@@ -11,332 +11,103 @@
 <table>
 <thead>
 <tr>
-<th>Particle</th>
 <th>Description</th>
+<th>Particle</th>
 </tr>
 </thead>
 <tbody>
-<tr>
-<td>"blood_heli"</td>
-<td>bloody explosion</td>
-</tr>
-<tr>
-<td>"boat_prop"</td>
-<td>a surf</td>
-</tr>
-<tr>
-<td>"camflash"</td>
-<td>small flare</td>
-</tr>
-<tr>
-<td>"carwashspray"</td>
-<td>steam, as on a carwash</td>
-</tr>
-<tr>
-<td>"cement"</td>
-<td>cement</td>
-</tr>
-<tr>
-<td>"cloudfast"</td>
-<td>fast clouds</td>
-</tr>
-<tr>
-<td>"coke_puff"</td>
-<td>puff of a coke</td>
-</tr>
-<tr>
-<td>"coke_trail"</td>
-<td>a pouring water</td>
-</tr>
-<tr>
-<td>"cigarette_smoke"</td>
-<td>a smoke from a cigarette</td>
-</tr>
-<tr>
-<td>"explosion_barrel"</td>
-<td>explosion and splinters of a box</td>
-</tr>
-<tr>
-<td>"explosion_crate"</td>
-<td>explosion and splinters of the large box</td>
-</tr>
-<tr>
-<td>"explosion_door"</td>
-<td>a smoke with sparks</td>
-</tr>
-<tr>
-<td>"exhale"</td>
-<td>a small smoke</td>
-</tr>
-<tr>
-<td>"explosion_fuel_car"</td>
-<td>explosion, as from the machine</td>
-</tr>
-<tr>
-<td>"explosion_large"</td>
-<td>the large explosion</td>
-</tr>
-<tr>
-<td>"explosion_medium"</td>
-<td>average explosion</td>
-</tr>
-<tr>
-<td>"explosion_molotov"</td>
-<td>explosion, as from a movotov cocktail</td>
-</tr>
-<tr>
-<td>"explosion_small"</td>
-<td>small explosion</td>
-</tr>
-<tr>
-<td>"explosion_tiny"</td>
-<td>very small explosion</td>
-</tr>
-<tr>
-<td>"extinguisher"</td>
-<td>foam of the fire extinguisher</td>
-</tr>
-<tr>
-<td>"flame"</td>
-<td>small fire</td>
-</tr>
-<tr>
-<td>"fire"</td>
-<td>fire</td>
-</tr>
-<tr>
-<td>"fire_med"</td>
-<td>average fire</td>
-</tr>
-<tr>
-<td>"fire_large"</td>
-<td>large fire</td>
-</tr>
-<tr>
-<td>"flamethrower"</td>
-<td>fire of the flamethrower</td>
-</tr>
-<tr>
-<td>"fire_bike"</td>
-<td>fire, as from a burning motorcycle</td>
-</tr>
-<tr>
-<td>"fire_car"</td>
-<td>fire, as from the burning machine</td>
-</tr>
-<tr>
-<td>"gunflash"</td>
-<td>as the bullet from a trunk takes off</td>
-</tr>
-<tr>
-<td>"gunsmoke"</td>
-<td>a smoke from a gun</td>
-</tr>
-<tr>
-<td>"insects"</td>
-<td>insects</td>
-</tr>
-<tr>
-<td>"heli_dust"</td>
-<td>a dust, as from the helicopter</td>
-</tr>
-<tr>
-<td>"jetpack"</td>
-<td>a jetpack&#39;s fire</td>
-</tr>
-<tr>
-<td>"jetthrust"</td>
-<td>fire from the muffler of the machine, as during use of nitrogen</td>
-</tr>
-<tr>
-<td>"nitro"</td>
-<td>nitro</td>
-</tr>
-<tr>
-<td>"molotov_flame"</td>
-<td>fire from a Molotov Cocktail</td>
-</tr>
-<tr>
-<td>"overheat_car"</td>
-<td>smoke from damaged car</td>
-</tr>
-<tr>
-<td>"overheat_car_electric"</td>
-<td>wrecked electro-machine</td>
-</tr>
-<tr>
-<td>"prt_boatsplash"</td>
-<td>foam</td>
-</tr>
-<tr>
-<td>"prt_cardebris"</td>
-<td>splinters from a box</td>
-</tr>
-<tr>
-<td>"prt_collisionsmoke"</td>
-<td>a dense white smoke</td>
-</tr>
-<tr>
-<td>"prt_glass"</td>
-<td>a crashing glass</td>
-</tr>
-<tr>
-<td>"prt_gunshell"</td>
-<td>shells</td>
-</tr>
-<tr>
-<td>"prt_sand"</td>
-<td>sand, which was scattered</td>
-</tr>
-<tr>
-<td>"prt_sand2"</td>
-<td>there is less sand, than in previous animation</td>
-</tr>
-<tr>
-<td>"prt_smokeII_3_expand"</td>
-<td>- a grey smoke</td>
-</tr>
-<tr>
-<td>"prt_smoke_huge"</td>
-<td>there is a lot of grey smoke</td>
-</tr>
-<tr>
-<td>"prt_spark"</td>
-<td>of a spark</td>
-</tr>
-<tr>
-<td>"prt_spark_2"</td>
-<td>the large sparks</td>
-</tr>
-<tr>
-<td>"prt_splash"</td>
-<td>burst</td>
-</tr>
-<tr>
-<td>"prt_wake"</td>
-<td>a wave</td>
-</tr>
-<tr>
-<td>"prt_watersplash"</td>
-<td>sparks</td>
-</tr>
-<tr>
-<td>"prt_wheeldirt"</td>
-<td>sparks from wheels of the car</td>
-</tr>
-<tr>
-<td>"petrolcan"</td>
-<td>a jet</td>
-</tr>
-<tr>
-<td>"puke"</td>
-<td>belch</td>
-</tr>
-<tr>
-<td>"riot_smoke"</td>
-<td>there is a lot of smoke</td>
-</tr>
-<tr>
-<td>"spraycan"</td>
-<td>spray</td>
-</tr>
-<tr>
-<td>"smoke30lit"</td>
-<td>a smoke</td>
-</tr>
-<tr>
-<td>"smoke30m"</td>
-<td>a rich smoke</td>
-</tr>
-<tr>
-<td>"smoke50lit"</td>
-<td>more richer smoke</td>
-</tr>
-<tr>
-<td>"shootlight"</td>
-<td>fireworks</td>
-</tr>
-<tr>
-<td>"smoke_flare"</td>
-<td>fireworks</td>
-</tr>
-<tr>
-<td>"tank_fire"</td>
-<td>a shot from the tank</td>
-</tr>
-<tr>
-<td>"teargas"</td>
-<td>gas, as from gas grenade</td>
-</tr>
-<tr>
-<td>"teargasAD"</td>
-<td>gas, as from small gas grenade</td>
-</tr>
-<tr>
-<td>"tree_hit_fir"</td>
-<td>leaf falling</td>
-</tr>
-<tr>
-<td>"tree_hit_palm"</td>
-<td>falling of pair large leafs</td>
-</tr>
-<tr>
-<td>"vent"</td>
-<td>slowly dissipating a smoke</td>
-</tr>
-<tr>
-<td>"vent2"</td>
-<td>practically too most</td>
-</tr>
-<tr>
-<td>"water_hydrant"</td>
-<td>the large flow of water</td>
-</tr>
-<tr>
-<td>"water_ripples"</td>
-<td>circles on water</td>
-</tr>
-<tr>
-<td>"water_speed"</td>
-<td>the large sparks from water</td>
-</tr>
-<tr>
-<td>"water_splash"</td>
-<td>small sparks from water</td>
-</tr>
-<tr>
-<td>"water_splash_big"</td>
-<td>average sparks</td>
-</tr>
-<tr>
-<td>"water_splsh_sml"</td>
-<td>sparks, only them it is not visible almost</td>
-</tr>
-<tr>
-<td>"water_swim"</td>
-<td>small sparks at navigation</td>
-</tr>
-<tr>
-<td>"waterfall_end"</td>
-<td>there is a lot of pair</td>
-</tr>
-<tr>
-<td>"water_fnt_tme"</td>
-<td>the large flow of water</td>
-</tr>
-<tr>
-<td>"water_fountain"</td>
-<td>water of a fountain</td>
-</tr>
-<tr>
-<td>"wallbust"</td>
-<td>a disappearing heap pair</td>
-</tr>
-<tr>
-<td>"WS_factorysmoke"</td>
-<td>smoke</td>
-</tr>
 </tbody>
 </table>
 
 <script src="../../../js/main.min.js"></script>
+<script>
+t="";const keys=[
+["bloody explosion","blood_heli"],
+["a surf","boat_prop"],
+["small flare","camflash"],
+["steam, as on a carwash","carwashspray"],
+["cement","cement"],
+["fast clouds","cloudfast"],
+["puff of a coke","coke_puff"],
+["a pouring water","coke_trail"],
+["a smoke from a cigarette","cigarette_smoke"],
+["explosion and splinters of a box","explosion_barrel"],
+["explosion and splinters of the large box","explosion_crate"],
+["a smoke with sparks","explosion_door"],
+["a small smoke","exhale"],
+["explosion, as from the machine","explosion_fuel_car"],
+["the large explosion","explosion_large"],
+["average explosion","explosion_medium"],
+["explosion, as from a movotov cocktail","explosion_molotov"],
+["small explosion","explosion_small"],
+["very small explosion","explosion_tiny"],
+["foam of the fire extinguisher","extinguisher"],
+["small fire","flame"],
+["fire","fire"],
+["average fire","fire_med"],
+["large fire","fire_large"],
+["fire of the flamethrower","flamethrower"],
+["fire, as from a burning motorcycle","fire_bike"],
+["fire, as from the burning machine","fire_car"],
+["as the bullet from a trunk takes off","gunflash"],
+["a smoke from a gun","gunsmoke"],
+["insects","insects"],
+["a dust, as from the helicopter","heli_dust"],
+["a jetpack's fire","jetpack"],
+["fire from the muffler of the machine, as during use of nitrogen","jetthrust"],
+["nitro","nitro"],
+["fire from a Molotov Cocktail","molotov_flame"],
+["smoke from damaged car","overheat_car"],
+["wrecked electro-machine","overheat_car_electric"],
+["foam","prt_boatsplash"],
+["splinters from a box","prt_cardebris"],
+["a dense white smoke","prt_collisionsmoke"],
+["a crashing glass","prt_glass"],
+["shells","prt_gunshell"],
+["sand, which was scattered","prt_sand"],
+["there is less sand, than in previous animation","prt_sand2"],
+["- a grey smoke","prt_smokeII_3_expand"],
+["there is a lot of grey smoke","prt_smoke_huge"],
+["of a spark","prt_spark"],
+["the large sparks","prt_spark_2"],
+["burst","prt_splash"],
+["a wave","prt_wake"],
+["sparks","prt_watersplash"],
+["sparks from wheels of the car","prt_wheeldirt"],
+["a jet","petrolcan"],
+["belch","puke"],
+["there is a lot of smoke","riot_smoke"],
+["spray","spraycan"],
+["a smoke","smoke30lit"],
+["a rich smoke","smoke30m"],
+["more richer smoke","smoke50lit"],
+["fireworks","shootlight"],
+["fireworks","smoke_flare"],
+["a shot from the tank","tank_fire"],
+["gas, as from gas grenade","teargas"],
+["gas, as from small gas grenade","teargasAD"],
+["leaf falling","tree_hit_fir"],
+["falling of pair large leafs","tree_hit_palm"],
+["slowly dissipating a smoke","vent"],
+["practically too most","vent2"],
+["the large flow of water","water_hydrant"],
+["circles on water","water_ripples"],
+["the large sparks from water","water_speed"],
+["small sparks from water","water_splash"],
+["average sparks","water_splash_big"],
+["sparks, only them it is not visible almost","water_splsh_sml"],
+["small sparks at navigation","water_swim"],
+["there is a lot of pair","waterfall_end"],
+["the large flow of water","water_fnt_tme"],
+["water of a fountain","water_fountain"],
+["a disappearing heap pair","wallbust"],
+["smoke","WS_factorysmoke"]
+].forEach(function(key, i){
+t+=
+"<tr>\
+<td>"+key[0]+"</td>\
+<td>\""+key[1]+"\"</td>\
+</tr>"
+})
+$('tbody').innerHTML+=t
+</script>
