--- a/en/scm-documentation/sa/radar-icons.html
+++ b/en/scm-documentation/sa/radar-icons.html
@@ -97,7 +97,7 @@ t="";const keys=[
   "<td>"+key[0]+"</td>"+
   "<td>"+key[1]+"</td>"+
   "<td><center><img src='../../../img/sa/radar/"+key[2]+".gif'></center></td>"+
-  "<td><code>"+key[3]+"</code></td>"+
+  "<td>\""+key[3]+"\"</td>"+
   "</tr>"
 })
 $('tbody').innerHTML+=t
