--- a/en/scm-documentation/sa/weapons.html
+++ b/en/scm-documentation/sa/weapons.html
@@ -30,7 +30,7 @@
 
 <script>
 t="";const keys=[
-["Unarmed",0,"1",-1,1,"fist","WEAP00"],
+["Unarmed",0,0,0,1,"fist","WEAP00"],
 ["Brass Knuckles",1,"brassknuckle",331,1,"BRASSKNUCKLEicon","WEAP01"],
 ["Golf Club",2,"golfclub",333,2,"golfclubicon","WEAP02"],
 ["Night Stick",3,"nitestick",334,2,"nitestickicon","WEAP03"],
@@ -76,15 +76,17 @@ t="";const keys=[
 ["Parachute",46,"gun_para",371,12,"gun_paraIcon","WEAP18"],
 ["Jetpack","","jetpack",370,"","jetpackicon",""],
 ["Cellphone","","cellphone",330,"","cellphoneicon",""]
-].forEach(function(key){
+].forEach(function(key,i){
 t+=
 "<tr>"+
 "<td>"+key[0]+"</td>"+ // name
 "<td>"+key[1]+"</td>"+ // id
-"<td>"+key[2]+"<hr>"+key[3]+"</td>"+ // model
+"<td>"
+if(i!=0)t+="#"+key[2]+"<hr>"+key[3];
+t+="</td>"+ // model
 "<td>"+key[4]+"</td>"+ // group
 "<td><center><img src='../../../img/sa/weapon/"+key[5]+".png'></center></td>"+
-"<td><code>"+key[6]+"</code></td>"+ // gxt
+"<td>\""+key[6]+"\"</td>"+ // gxt
 "</tr>"
 })
 $('tbody').innerHTML+=t
