--- a/en/scm-documentation/sa/weather.html
+++ b/en/scm-documentation/sa/weather.html
@@ -11,180 +11,51 @@
 ```sb3
 01b6: set_weather &lt;id&gt;
 ```
-
-#### Los Santos
-
 <table>
 <thead>
 <tr>
+<th>:iSearch:</th>
 <th>ID</th>
-<th>Description</th>
+<th>GXT</th>
 </tr>
 </thead>
 <tbody>
-<tr>
-<td>0</td>
-<td>Extra Sunny</td>
-</tr>
-<tr>
-<td>1</td>
-<td>Sunny</td>
-</tr>
-<tr>
-<td>2</td>
-<td>Extra Sunny Smog</td>
-</tr>
-<tr>
-<td>3</td>
-<td>Sunny Smog</td>
-</tr>
-<tr>
-<td>4</td>
-<td>Cloudy</td>
-</tr>
 </tbody>
 </table>
-
-#### San Fierro
-
-<table>
-<thead>
-<tr>
-<th>ID</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody>
-<tbody>
-<tr>
-<td>5</td>
-<td>Sunny</td>
-</tr>
-<tr>
-<td>6</td>
-<td>Extra Sunny</td>
-</tr>
-<tr>
-<td>7</td>
-<td>Cloudy</td>
-</tr>
-<tr>
-<td>8</td>
-<td>Rainy</td>
-</tr>
-<tr>
-<td>9</td>
-<td>Foggy</td>
-</tr>
-</tbody>
-</table>
-
-#### Las Venturas
-
-<table>
-<thead>
-<tr>
-<th>ID</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody>
-<tbody>
-<tr>
-<td>10</td>
-<td>Sunny</td>
-</tr>
-<tr>
-<td>11</td>
-<td>Extra Sunny</td>
-</tr>
-<tr>
-<td>12</td>
-<td>Cloudy</td>
-</tr>
-</tbody>
-</table>
-
-#### Countryside
-
-<table>
-<thead>
-<tr>
-<th>ID</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody>
-<tbody>
-<tr>
-<td>13</td>
-<td>Extra Sunny</td>
-</tr>
-<tr>
-<td>14</td>
-<td>Sunny</td>
-</tr>
-<tr>
-<td>15</td>
-<td>Cloudy</td>
-</tr>
-<tr>
-<td>16</td>
-<td>Rainy</td>
-</tr>
-</tbody>
-</table>
-
-#### Desert
-
-<table>
-<thead>
-<tr>
-<th>ID</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody>
-<tbody>
-<tr>
-<td>17</td>
-<td>Extra Sunny</td>
-</tr>
-<tr>
-<td>18</td>
-<td>Sunny</td>
-</tr>
-<tr>
-<td>19</td>
-<td>Sandstorm</td>
-</tr>
-</tbody>
-</table>
-
-#### Special
-
-<table>
-<thead>
-<tr>
-<th>ID</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody>
-<tbody>
-<tr>
-<td>20</td>
-<td>Underwater</td>
-</tr>
-<tr>
-<td>21</td>
-<td>Extracolours 1</td>
-</tr>
-<tr>
-<td>22</td>
-<td>Extracolours 2</td>
-</tr>
-</tbody>
-</table>
-
+> **L**os **S**antos, **S**an **F**ierro, **L**as **V**enturas, **C**ountryside, **D**esert, **S**pecial
 <script src="../../../js/main.min.js"></script>
+<script>
+const keys=[
+["LA: Extra Sunny",0,"WEATH0"],
+["LA: Sunny",1,"WEATH1"],
+["LA: Extra Sunny Smog",2,"WEATH2"],
+["LA: Sunny Smog",3,"WEATH3"],
+["LA: Cloudy",4,"WEATH4"],
+["SF: Sunny",5,"WEATH5"],
+["SF: Extra Sunny",6,"WEATH6"],
+["SF: Cloudy",7,"WEATH7"],
+["SF: Rainy",8,"WEATH8"],
+["SF: Foggy",9,"WEATH9"],
+["LV: Sunny",10,"WEATH10"],
+["LV: Extra Sunny",11,"WEATH11"],
+["LV: Cloudy",12,"WEATH12"],
+["C: Extra Sunny",13,"WEATH13"],
+["C: Sunny",14,"WEATH14"],
+["C: Cloudy",15,"WEATH15"],
+["C: Rainy",16,"WEATH16"],
+["D: Extra Sunny",17,"WEATH17"],
+["D: Sunny",18,"WEATH18"],
+["D: Sandstorm",19,"WEATH19"],
+["S: Underwater",20,"WEATH20"],
+["S: Extracolours 1",21,"WEATH21"],
+["S: Extracolours 2",22,"WEATH22"]
+].forEach(function(key){
+t+=
+"<tr>\
+<td>"+key[0]+"</td>\
+<td>"+key[1]+"</td>\
+<td>\""+key[2]+"\"</td>\
+</tr>"
+})
+$('tbody').innerHTML+=t
+</script>
