--- a/en/scm-documentation/ascii-character-codes.html
+++ b/en/scm-documentation/ascii-character-codes.html
@@ -21,7 +21,7 @@
 <script src="../../js/main.min.js"></script>
 
 <script>
-t="";const keys=[
+const keys=[
 ["Horizontal Tabulation (HT)",9],
 ["Newline Character (LF)",10],
 ["Carriage Return (CR)",13],
