--- a/en/scm-documentation/sa/gangs.html
+++ b/en/scm-documentation/sa/gangs.html
@@ -24,7 +24,7 @@
 
 <script src="../../../js/main.min.js"></script>
 <script>
-t="";const keys=[
+const keys=[
 ["Ballas",0,"ST_GNG0"],
 ["Grove Street Families",1,"ST_GNG1"],
 ["Los Santos Vagos",2,"ST_GNG2"],
