--- a/en/scm-documentation/sa/particles.html
+++ b/en/scm-documentation/sa/particles.html
@@ -21,7 +21,7 @@
 
 <script src="../../../js/main.min.js"></script>
 <script>
-t="";const keys=[
+const keys=[
 ["bloody explosion","blood_heli"],
 ["a surf","boat_prop"],
 ["small flare","camflash"],
