--- a/en/scm-documentation/sa/weapons.html
+++ b/en/scm-documentation/sa/weapons.html
@@ -29,7 +29,7 @@
 <script src="../../../js/main.min.js"></script>
 
 <script>
-t="";const keys=[
+const keys=[
 ["Unarmed",0,0,0,1,"fist","WEAP00"],
 ["Brass Knuckles",1,"brassknuckle",331,1,"BRASSKNUCKLEicon","WEAP01"],
 ["Golf Club",2,"golfclub",333,2,"golfclubicon","WEAP02"],
