--- a/en/scm-documentation/virtual-key-codes.html
+++ b/en/scm-documentation/virtual-key-codes.html
@@ -24,7 +24,7 @@
 <script src="../../js/main.min.js"></script>
 
 <script>
-t="";const keys=[
+const keys=[
 ["Left mouse button",1],
 ["Right mouse button",2],
 ["Middle mouse button",4],
