--- a/en/scm-documentation/sa/radar-icons.html
+++ b/en/scm-documentation/sa/radar-icons.html
@@ -26,7 +26,7 @@
 <script src="../../../js/main.min.js"></script>
 
 <script>
-t="";const keys=[
+const keys=[
 ["small yellow square",0,"icon0","LG_50"],
 ["Friend",1,"icon1","LG_54"],
 ["Player position",2,"icon2","LG_01"],
