Fixed icon of 9GUN2

--- a/en/scm-documentation/sa/tattoos.html
+++ b/en/scm-documentation/sa/tattoos.html
@@ -269,7 +269,7 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <td>9GUN2</td>
 <td>9</td>
 <td>Gun</td>
-<td>![](../../.gitbook/sa/tatoo/9gun2.png)</td>
+<td>![](../../../img/sa/tatoo/9gun2.png)</td>
 </tr>
 <tr>
 <td>9homeboy</td>
