--- a/en/scm-documentation/vc/radar-icons.html
+++ b/en/scm-documentation/vc/radar-icons.html
@@ -19,127 +19,127 @@
 <tbody>
 <tr>
 <td>0</td>
-<td>![](../../../img/vc/radar/dot.png)</td>
+<td>![](../../../img/vc/radar/dot.gif)</td>
 <td>Small pink square</td>
 </tr>
 <tr>
 <td>1</td>
-<td>![](../../../img/vc/radar/radar_centre.png)</td>
+<td>![](../../../img/vc/radar/radar_centre.gif)</td>
 <td>Player position</td>
 </tr>
 <tr>
 <td>2</td>
-<td>![](../../../img/vc/radar/arrow.png)</td>
+<td>![](../../../img/vc/radar/arrow.gif)</td>
 <td>Pink arrow</td>
 </tr>
 <tr>
 <td>3</td>
-<td>![](../../../img/vc/radar/radar_north.png)</td>
+<td>![](../../../img/vc/radar/radar_north.gif)</td>
 <td>North</td>
 </tr>
 <tr>
 <td>4</td>
-<td>![](../../../img/vc/radar/radar_avery.png)</td>
+<td>![](../../../img/vc/radar/radar_avery.gif)</td>
 <td>Avery Carrington</td>
 </tr>
 <tr>
 <td>5</td>
-<td>![](../../../img/vc/radar/radar_biker.png)</td>
+<td>![](../../../img/vc/radar/radar_biker.gif)</td>
 <td>Big Mitch Baker</td>
 </tr>
 <tr>
 <td>6</td>
-<td>![](../../../img/vc/radar/radar_cortez.png)</td>
+<td>![](../../../img/vc/radar/radar_cortez.gif)</td>
 <td>Colonel Cortez</td>
 </tr>
 <tr>
 <td>7</td>
-<td>![](../../../img/vc/radar/radar_diaz.png)</td>
+<td>![](../../../img/vc/radar/radar_diaz.gif)</td>
 <td>Ricardo Diaz</td>
 </tr>
 <tr>
 <td>8</td>
-<td>![](../../../img/vc/radar/radar_kent.png)</td>
+<td>![](../../../img/vc/radar/radar_kent.gif)</td>
 <td>Kent Paul</td>
 </tr>
 <tr>
 <td>9</td>
-<td>![](../../../img/vc/radar/radar_lawyer.png)</td>
+<td>![](../../../img/vc/radar/radar_lawyer.gif)</td>
 <td>Lawyer (Ken Rosenberg)</td>
 </tr>
 <tr>
 <td>10</td>
-<td>![](../../../img/vc/radar/radar_phil.png)</td>
+<td>![](../../../img/vc/radar/radar_phil.gif)</td>
 <td>Phil Cassidy</td>
 </tr>
 <tr>
 <td>11</td>
-<td>![](../../../img/vc/radar/bikers.png)</td>
+<td>![](../../../img/vc/radar/bikers.gif)</td>
 <td>Biker&#39;s Bar</td>
 </tr>
 <tr>
 <td>12</td>
-<td>![](../../../img/vc/radar/boatyard.png)</td>
+<td>![](../../../img/vc/radar/boatyard.gif)</td>
 <td>Boatyard</td>
 </tr>
 <tr>
 <td>13</td>
-<td>![](../../../img/vc/radar/club.png)</td>
+<td>![](../../../img/vc/radar/club.gif)</td>
 <td>Malibu Club</td>
 </tr>
 <tr>
 <td>14</td>
-<td>![](../../../img/vc/radar/cubans.png)</td>
+<td>![](../../../img/vc/radar/cubans.gif)</td>
 <td>Cubans</td>
 </tr>
 <tr>
 <td>15</td>
-<td>![](../../../img/vc/radar/filmstudio.png)</td>
+<td>![](../../../img/vc/radar/filmstudio.gif)</td>
 <td>Film Studio</td>
 </tr>
 <tr>
 <td>16</td>
-<td>![](../../../img/vc/radar/gun.png)</td>
+<td>![](../../../img/vc/radar/gun.gif)</td>
 <td>Ammu-nation</td>
 </tr>
 <tr>
 <td>17</td>
-<td>![](../../../img/vc/radar/haitians.png)</td>
+<td>![](../../../img/vc/radar/haitians.gif)</td>
 <td>Haitians</td>
 </tr>
 <tr>
 <td>18</td>
-<td>![](../../../img/vc/radar/hardware.png)</td>
+<td>![](../../../img/vc/radar/hardware.gif)</td>
 <td>Toolshop</td>
 </tr>
 <tr>
 <td>19</td>
-<td>![](../../../img/vc/radar/radar_save.png)</td>
+<td>![](../../../img/vc/radar/radar_save.gif)</td>
 <td>Safe House</td>
 </tr>
 <tr>
 <td>20</td>
-<td>![](../../../img/vc/radar/radar_strip.png)</td>
+<td>![](../../../img/vc/radar/radar_strip.gif)</td>
 <td>Pole Position Club</td>
 </tr>
 <tr>
 <td>21</td>
-<td>![](../../../img/vc/radar/icecream.png)</td>
+<td>![](../../../img/vc/radar/icecream.gif)</td>
 <td>Cherry Poppers Factory</td>
 </tr>
 <tr>
 <td>22</td>
-<td>![](../../../img/vc/radar/kcabs.png)</td>
+<td>![](../../../img/vc/radar/kcabs.gif)</td>
 <td>Kaufman Cabs</td>
 </tr>
 <tr>
 <td>23</td>
-<td>![](../../../img/vc/radar/lovefist.png)</td>
+<td>![](../../../img/vc/radar/lovefist.gif)</td>
 <td>Love Fist</td>
 </tr>
 <tr>
 <td>24</td>
-<td>![](../../../img/vc/radar/printworks.png)</td>
+<td>![](../../../img/vc/radar/printworks.gif)</td>
 <td>Print Works</td>
 </tr>
 <tr>
@@ -149,72 +149,72 @@
 </tr>
 <tr>
 <td>26</td>
-<td>![](../../../img/vc/radar/SunYard.png)</td>
+<td>![](../../../img/vc/radar/SunYard.gif)</td>
 <td>Sunshine Autos</td>
 </tr>
 <tr>
 <td>27</td>
-<td>![](../../../img/vc/radar/spray.png)</td>
+<td>![](../../../img/vc/radar/spray.gif)</td>
 <td>Pay &#39;n&#39; Spray</td>
 </tr>
 <tr>
 <td>28</td>
-<td>![](../../../img/vc/radar/tshirt.png)</td>
+<td>![](../../../img/vc/radar/tshirt.gif)</td>
 <td>Clothes</td>
 </tr>
 <tr>
 <td>29</td>
-<td>![](../../../img/vc/radar/tommy.png)</td>
+<td>![](../../../img/vc/radar/tommy.gif)</td>
 <td>Vercetti&#39;s Mansion</td>
 </tr>
 <tr>
 <td>30</td>
-<td>![](../../../img/vc/radar/phone.png)</td>
+<td>![](../../../img/vc/radar/phone.gif)</td>
 <td>Phone</td>
 </tr>
 <tr>
 <td>31</td>
-<td>![](../../../img/vc/radar/RWildstyle.png)</td>
+<td>![](../../../img/vc/radar/RWildstyle.gif)</td>
 <td>Wildstyle Radio station</td>
 </tr>
 <tr>
 <td>32</td>
-<td>![](../../../img/vc/radar/RFlash.png)</td>
+<td>![](../../../img/vc/radar/RFlash.gif)</td>
 <td>Flash Radio station</td>
 </tr>
 <tr>
 <td>33</td>
-<td>![](../../../img/vc/radar/RKchat.png)</td>
+<td>![](../../../img/vc/radar/RKchat.gif)</td>
 <td>KChat Radio station</td>
 </tr>
 <tr>
 <td>34</td>
-<td>![](../../../img/vc/radar/RFever.png)</td>
+<td>![](../../../img/vc/radar/RFever.gif)</td>
 <td>Fever Radio station</td>
 </tr>
 <tr>
 <td>35</td>
-<td>![](../../../img/vc/radar/RVRock.png)</td>
+<td>![](../../../img/vc/radar/RVRock.gif)</td>
 <td>VRock Radio station</td>
 </tr>
 <tr>
 <td>36</td>
-<td>![](../../../img/vc/radar/rvcpr.png)</td>
+<td>![](../../../img/vc/radar/rvcpr.gif)</td>
 <td>VCPR Radio station</td>
 </tr>
 <tr>
 <td>37</td>
-<td>![](../../../img/vc/radar/REspantoso.png)</td>
+<td>![](../../../img/vc/radar/REspantoso.gif)</td>
 <td>Espantoso Radio station</td>
 </tr>
 <tr>
 <td>38</td>
-<td>![](../../../img/vc/radar/REmotion.png)</td>
+<td>![](../../../img/vc/radar/REmotion.gif)</td>
 <td>Emotion Radio station</td>
 </tr>
 <tr>
 <td>39</td>
-<td>![](../../../img/vc/radar/RWave.png)</td>
+<td>![](../../../img/vc/radar/RWave.gif)</td>
 <td>Wave Radio station</td>
 </tr>
 </tbody>
