--- a/en/scm-documentation/sa/weapons.html
+++ b/en/scm-documentation/sa/weapons.html
@@ -86,7 +86,7 @@ if(i!=0)t+="#"+key[2]+"<hr>"+key[3];
 t+="</td>"+ // model
 "<td>"+key[4]+"</td>"+ // group
 "<td><center><img src='../../../img/sa/weapon/"+key[5]+".png'></center></td>"+
-"<td>\""+key[6]+"\"</td>"+ // gxt
+"<td>"+key[6]+"</td>"+ // gxt
 "</tr>"
 })
 $('tbody').innerHTML+=t
