--- a/en/scm-documentation/sa/weather.html
+++ b/en/scm-documentation/sa/weather.html
@@ -54,7 +54,7 @@ t+=
 "<tr>\
 <td>"+key[0]+"</td>\
 <td>"+key[1]+"</td>\
-<td>\""+key[2]+"\"</td>\
+<td>"+key[2]+"</td>\
 </tr>"
 })
 $('tbody').innerHTML+=t
