--- a/en/scm-documentation/sa/gangs.html
+++ b/en/scm-documentation/sa/gangs.html
@@ -40,7 +40,7 @@ t+=
 "<tr>\
 <td>"+key[0]+"</td>\
 <td>"+key[1]+"</td>\
-<td>\""+key[2]+"\"</td>\
+<td>"+key[2]+"</td>\
 </tr>"
 })
 $('tbody').innerHTML+=t
