--- a/en/editor/opcode-search-tool.html
+++ b/en/editor/opcode-search-tool.html
@@ -11,7 +11,9 @@
 
 You can call this tool by pressing `Ctrl+Alt+2` or by selecting the menu item: `Tools->IDE Tools->Opcode Search`.
 
+:::center
 ![](../../img/assets/ost.png)
+:::
 
 To find an opcode, type some words in the input line, e.g. `actor car`. The tool displays the opcodes with these words. You can also use special search operators.
 
