🟡 Fixed links to subtitles

--- a/en/coding/classes.html
+++ b/en/coding/classes.html
@@ -30,9 +30,9 @@ Player.SetMinWantedLevel($PLAYER_CHAR, 2)
 
 There are three types of class members:
 
-* [conditions](#Conditions)
-* [methods](#Methods)
-* [properties](#Properties)
+* [conditions](#conditions)
+* [methods](#methods)
+* [properties](#properties)
 
 ### Conditions
 
