--- a/test/markdown/html.html
+++ b/test/markdown/html.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Markdown</title>
+  <title>HTML</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -114,4 +114,6 @@ t.display="block"
 t.width="100%"
 t.height="calc(100vh - 5rem)"
 t.padding="1rem"
+t.color="black"
+t["font-size"]="1rem"
 </script>
