--- a/en/version-history.html
+++ b/en/version-history.html
@@ -90,7 +90,7 @@ Read more on constants highlighting there: [Language service](editor/language-se
 * fixed a bug with LCS and VCS compilation ([#56](https://github.com/sannybuilder/dev/issues/56))
 * arrays in LCS and VCS now get custom names from `CustomVariables.ini` and `CustomArrays.ini` ([#53](https://github.com/sannybuilder/dev/issues/53))
 
-:clap: Kudos to [darkdraggy](https://gtaforums.com/profile/1097463-darkdraggy/)** **for reporting the first bug and helping to test the fix.
+:clap: Kudos to [darkdraggy](https://gtaforums.com/profile/1097463-darkdraggy/) for reporting the first bug and helping to test the fix.
 
 ## v. 3.5.0 - 18.08.2020
 
@@ -115,7 +115,7 @@ Read more on constants highlighting there: [Language service](editor/language-se
 New opcode definitions for GTA LCS and GTA VCS are incompatible with the previous definitions. You must disassemble the `main.scm` prior to making any scripts for those games.
 {% endhint %}
 
-:clap: Kudos to [marcelo\_20xx](https://gtaforums.com/profile/95582-marcelo\_20xx/) and [fastman92](https://gtaforums.com/profile/423631-fastman92/)** **for their awesome contribution to this release.
+:clap: Kudos to [marcelo\_20xx](https://gtaforums.com/profile/95582-marcelo\_20xx/) and [fastman92](https://gtaforums.com/profile/423631-fastman92/) for their awesome contribution to this release.
 
 ## v. 3.4.1 - 06.08.2020
 
