--- a/en/cleo-3/opcodes.html
+++ b/en/cleo-3/opcodes.html
@@ -11,7 +11,7 @@
 
 The using of the following opcodes is only possible at the CLEO 3 library installed. At compiling Sanny Builder checks if the library is installed and if not, warns that it’s necessary. If you write a script using these opcodes, you have to include the library files as well to guarantee its functionality to the end user
 
-:::cols-4 pre p-4
+:::cols-3 cols-sm-4 pre p-4 center
 [Opcode 0A8C](#0A8C)
 [Opcode 0A99](#0A99)
 [Opcode 0AA6](#0AA6)
