--- a/es/credits.html
+++ b/es/credits.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="es">
 <head>
-  <title>Credits</title>
+  <title>Creditos</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,19 +9,19 @@
 </head>
 <body>
 
-## Contributors
+## Colaboradores
 
-**Sanny Builder** is made and produced by [Seemann](https://github.com/x87) with the contributions from the best people from around the globe:
+**Sanny Builder** está hecho y producido por [Seemann](https://github.com/x87) con las contribuciones de las mejores personas de todo el mundo:
 
-Alexander Blade, Barton Waterduck, BG_ASM, Capushon, CyQ, Demarest, JernejL, Hammer83, koPPP, listener, Midnightz, OrionSR, pdescobar, PLPynton, San'OK, Sergey81, spaceeinstein, Silent, wmysterio, XMDS, Y_Less, ZAZ, and many others.
+Alexander Blade, Barton Waterduck, BG_ASM, Capushon, CyQ, Demarest, JernejL, Hammer83, koPPP, listener, Midnightz, OrionSR, pdescobar, PLPynton, San'OK, Sergey81, spaceeinstein, Silent, wmysterio, XMDS, Y_Less, ZAZ, y otros más.
 
-**Special thanks to yelmi and Xieon for their support.**
+**Un agradecimiento especial a yelmi y Xieon por su apoyo.**
 
 ## Translators
 
 Y_Less, tomworld10, -Shadow-Link, Mordecki, Silent, WordsBG, FunGt, Wesser, Mobster, Jost_Vice, Thomazu, Balint, Ridvan and Tuna (RT), MatiDragon, Mega GTAшnik, SHooZ, Yi Yangyijk, VCT team, Alex5526, Marek Simsa, Syping/Hulkkiller, IMasterFX, MINE, wmysterio, forms55, XMDS.
 
-## Acknowledgements
+## Agradecimientos
 
 Delphi 7 © Borland Software Corp\
 [http://www.borland.com](http://www.borland.com)
