--- a/en/coding/classes.html
+++ b/en/coding/classes.html
@@ -15,10 +15,10 @@ A **class** is a group of commands applied to the in-game entities: player, peds
 
 Syntax:\
 `<Class name>.<Class member>(parameters)`
-
-> `Class name` - the name of a group of commands defined in the `classes.db` file for this edit mode.
-> `Class member` - one of the commands included in the class.
-> `Parameters` - 0 or more comma-delimited [parameters](data-types.md)
+\
+`Class name` - the name of a group of commands defined in the `classes.db` file for this edit mode.\
+`Class member` - one of the commands included in the class.\
+`Parameters` - 0 or more comma-delimited [parameters](data-types.md)
 
 ```sb3
 Player.SetMinWantedLevel($PLAYER_CHAR, 2)
