--- a/es/coding/classes.html
+++ b/es/coding/classes.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="es">
 <head>
   <title>Classes</title>
   <meta charset="utf-8">
@@ -9,34 +9,34 @@
 </head>
 <body>
 
-A **class** is a group of commands applied to the in-game entities: player, peds, objects, etc. For example, the `Player` class groups the commands performed over the player character.
+Una **clase** es un grupo de comandos aplicados a las entidades del juego: jugador, actores, objetos, etc. Por ejemplo, la clase `Player` agrupa los comandos realizados sobre el personaje del jugador.
 
-## General Syntax
+## Sintaxis general
 
-Syntax:\
-`<Class name>.<Class member>(parameters)`
-
-> `Class name` - the name of a group of commands defined in the `classes.db` file for this edit mode.
-> `Class member` - one of the commands included in the class.
-> `Parameters` - 0 or more comma-delimited [parameters](data-types.md)
+Sintaxis:\
+`<Class name>.<Class member>(parameters)`\
+\
+`Class name` -  el nombre de un grupo de comandos definidos en el archivo `classes.db` para el mismo modo de edición.\
+`Class member` - uno de los comandos incluidos en la clase.\
+`Parameters` - 0 o más [parámetros](data-types.md) delimitados por comas.
 
 ```sb3
 Player.SetMinWantedLevel($PLAYER_CHAR, 2)
 ```
 
-`Player` - class name\
-`SetMinWantedLevel` - class member\
-`$PLAYER_CHAR, 2` - two parameters for `SetMinWantedLevel`
+`Player` - nombre de la clase\
+`SetMinWantedLevel` - miembro de la clase\
+`$PLAYER_CHAR, 2` - dos parametros de `SetMinWantedLevel`
 
-There are three types of class members:
+Hay tres tipos de miembros de la clase:
 
-* [conditions](#conditions)
-* [methods](#methods)
-* [properties](#properties)
+* [condiciones](#conditions)
+* [métodos](#methods)
+* [propiedades](#properties)
 
-### Conditions
+### Condiciones
 
-The list that appears when you press `Ctrl+Space` marks conditional commands with the word `Check`. They are used in [conditional expressions](conditions.md): 
+La lista que aparece cuando presiona `Ctrl+Space` marca los comandos condicionales con la palabra `Check`. Se utilizan en [expresiones condicionales](conditions.md): 
 
 ```sb3
 if
@@ -44,20 +44,20 @@ if
 jf @anywhere
 ```
 
-### Methods
+### Métodos
 
-Methods are regular commands used to complete a single in-game action, e.g. moving an object, destroying a vehicle, etc.:
+Los métodos son comandos habituales que se utilizan para completar una única acción en el juego, p.ej. mover un objeto, destruir un vehículo, etc:
 
 ```sb3
 Object.PutAt($crate, 10.0, -25.5, 12.2)
 Car.Destroy($car)
 ```
 
-They are marked with the work `proc` in the list of class members.
+Están marcados con `proc` en la lista de miembros de la clase.
 
-A special kind of methods is a constructor. A constructor creates a new instance of a class and stores its handle to a variable.
+Un tipo especial de métodos es un constructor. Un constructor crea una nueva instancia de una clase y almacena su identificador en una variable.
 
-In Sanny Builder the constructor can be written in two equivalent ways:
+En Sanny Builder, el constructor se puede escribir de dos formas equivalentes:
 
 ```sb3
 Player.Create($PLAYER_CHAR, #NULL, 2488.5601, -1666.84, 13.38)
@@ -67,11 +67,11 @@ Player.Create($PLAYER_CHAR, #NULL, 2488.5601, -1666.84, 13.38)
 $PLAYER_CHAR = Player.Create(#NULL, 2488.5601, -1666.84, 13.38)
 ```
 
-### Properties
+### Propiedades
 
-Property allows you to access class attributes and/or modify them.
+La propiedad le permite acceder a los atributos de la clase y/o modificarlos.
 
-For example, the `.Money` property of the `Player` class allows to operate with the amount of money of the player:
+Por ejemplo la propiedad `.Money` de la clase `Player` permite operar con la cantidad de dinero del jugador:
 
 ```sb3
 Player($PLAYER_CHAR).Money += 1000000 // add more money
@@ -81,37 +81,37 @@ Player($PLAYER_CHAR).Money > 461@ // check the amount
 
 
 <div class="warning">
-In the current version the compiler ignores whitespace characters in [string literals](data-types.md#string-literals) used in property parameters:
+Actualmente, el compilador ignora los espacios en blanco en las [cadena literarias](data-types.md#string-literals) utilizadas en los parámetros de propiedad:
 
 ```sb3
 0@ = File.Open("file name","wb")
 ```
 
-will be compiled as:
+se compilará como:
 
 ```sb3
 0@ = File.Open("filename","wb")
 ```
 </div>
-## Class Instances
+## Instancias de clase
 
-Almost all class members take a variable as the first parameter. This variable holds a handle of the class instance which is a concrete in-game entity the command is applied to:
+Casi todos los miembros de la clase toman una variable como el primer parámetro. Esta variable tiene un identificador de la instancia de clase, que es una entidad concreta del juego a la que se aplica el comando:
 
 ```sb3
 Player.Build($PLAYER_CHAR)
 ```
 
-`$PLAYER_CHAR` - the class instance. 
+`$PLAYER_CHAR` - la instancia de la clase. 
 
-For some in-game entities there is only one instance to exist. An example of that would be the camera that controls what the player can see. The members of classes for such entities do not require a variable with the class instance:
+Para algunas entidades del juego, solo existe una instancia. Un ejemplo de eso sería la cámara que controla lo que el jugador puede ver. Los miembros de clases para tales entidades no requieren una variable con la instancia de clase:
 
 ```sb3
 Camera.SetBehindPlayer()
 ```
 
-### Declaring a class instance
+### Declarando una instancia de clase
 
-Variables can be [declared](variables.md#var-end-construct) using a class name as the type:
+Las variables se pueden [declarar](variables.md#var-end-construct) utilizando un nombre de clase como tipo:
 
 ```sb3
 var
@@ -119,7 +119,7 @@ var
 end
 ```
 
-It instructs the compiler that `$PLAYER_CHAR` holds an instance of the class `Player`. This variable can serve as an alias to the class name:
+Indica al compilador que `$PLAYER_CHAR` contiene una instancia de la clase `Player`. Esta variable puede servir como un alias para el nombre de la clase:
 
 ```sb3
 if
@@ -128,24 +128,24 @@ jf @anywhere
 ```
 
 <div class="warning">
-If a variable substitutes a class name, the compiler also makes it the first parameter, hence no need to use it again in the list of parameters:
+Si una variable sustituye al nombre de una clase, el compilador también lo convierte en el primer parámetro, por lo que no es necesario volver a usarlo en la lista de parámetros:
 
 ```sb3
 $PLAYER_CHAR.SetClothes("PLAYER_FACE", "HEAD", Head)
 ```
 
-is equivalent to:
+Es equivalente a:
 
 ```sb3
 Player.SetClothes($PLAYER_CHAR, "PLAYER_FACE", "HEAD", Head)
 ```
 </div>
 
-Variables declared as instances of a class can be redeclared with another type.
+Las variables declaradas como instancias de una clase se pueden volver a declarar con otro tipo.
 
-### The `Model` Class 
+### La Clase `Model` 
 
-[Model names](data-types.md#model-names) are always instances of the `Model` class:
+Los [nombres de los modelos](data-types.md#model-names) son siempre instancias de la clase `Model`:
 
 ```sb3
 #AK47.Load
@@ -157,7 +157,7 @@ if
 jf @loop
 ```
 
-It is equivalent to:
+Es equivalente a:
 
 ```sb3
 Model.Load(#AK47)
@@ -169,22 +169,22 @@ if
 jf @loop
 ```
 
-## Class constants
+## Constantes de la clase
 
-Class parameters can be assigned to an [enumerated type](../edit-modes/enums.txt.md). It makes the source code more readable:
+Los parámetros de clase se pueden asignar a un [tipo enumerado](../edit-modes/enums.txt.md). Hace que el código fuente sea más legible:
 
 ```sb3
 Player.SetClothes($PLAYER_CHAR, "VEST", "VEST", BodyPart.Torso)
 ```
 
-The last parameter (`BodyPart.Torso`) is a member of the `BodyPart` enum substituted with `0` during compilation.  The enums and values are defined in the `enums.txt` file.
+El último parámetro (`BodyPart.Torso`)  es un miembro del enumerador `BodyPart` sustituida por `0` durante la compilación. Las enumeraciones con sus valores se definen en el archivo `enums.txt`.
 
-#### Extended parameters (deprecated)
+#### Parámetros extendidos (obsoletos)
 
-Sanny Builder prior to v3.6 defined special constants for class members in the file `classes.db` . These parameters were called extended. This solution only allowed for one extended parameter per class member.
+Sanny Builder antes de v3.6 definió constantes especiales para los miembros de clase en el archivo `classes.db` . Estos parámetros se denominaron extendidos. Esta solución solo permitía un parámetro extendido por miembro de clase.
 
-Since v3.6 class members use enum names as their types and may have any number of enumerated parameters.
+Desde v3.6 los miembros de la clase usan nombres de enumeración como sus tipos y pueden tener cualquier número de parámetros enumerados.
 
-For backward compatibility Sanny Builder still supports old extended parameters during compilation.  `classes.db` keeps them under the `DEPRECATED_ENUMS` section.
+Para la compatibilidad con versiones anteriores, Sanny Builder sigue siendo compatible con los parámetros extendidos antiguos durante la compilación. classes.db los mantiene bajo la sección `DEPRECATED_ENUMS`.
 
 <script src="../../js/main.min.js"></script>
