--- a/es/coding/comments.html
+++ b/es/coding/comments.html
@@ -9,30 +9,30 @@
 </head>
 <body>
 
-Comments start with the double slash `//`. Everything after `//` to the end of the line is ignored by the compiler.
+Los comentarios comienzan con una barra doble `//`. Everything after `//` al final de la línea es ignorado por el compilador.
 
 ```sb3
-// comments here
+// comentarios aqui
 0001: wait 0 ms
 ```
 
-To comment out multiple lines or a part of the line, use block comments `{}`:
+Para comentar varias líneas o una parte de la línea, use comentarios de bloque `{}`:
 
 ```sb3
-0001: wait {comments here} 0 ms
+0001: wait {comentarios aqui} 0 ms
 ```
 
-Since version 3.06 Sanny Builder also supports the C++-like comments `/* */`.
+Desde la versión 3.06, Sanny Builder también admite comentarios similares a C++ `/* */`.
 
 ```sb3
 0000: nop
 /*
-   comments
-     here
+   comentarios
+      aqui
 */
 0001: wait 0 ms
 ```
 
-To comment out or uncomment multiple selected lines of the code press `Ctrl+Q` (this hotkey is configurable in the [options](../editor/options/hotkeys.md)).
+Para comentar o descomentar varias líneas seleccionadas del código, presione `Ctrl+Q` (esta tecla de acceso rápido se puede configurar en las [opciones](../editor/options/hotkeys.md)).
 
 <script src="../../js/main.min.js"></script>
