--- a/en/coding/conditions.html
+++ b/en/coding/conditions.html
@@ -69,12 +69,10 @@ if and
 jf @anywhere
 ```
 
-The compiler writes the number `1` instead of `and`.
-
-- `IF AND` - conditions connected with the logical operator `AND`\
-(a replacement for `if 1..7`)
-- `IF OR` - conditions connected with the logical operator `OR `\
-(a replacement for `if 21..27`)
+The compiler writes the number `1` instead of `and`.\
+\
+`IF AND` - conditions connected with the logical operator `AND` (a replacement for `if 1..7`)\
+`IF OR` - conditions connected with the logical operator `OR ` (a replacement for `if 21..27`)
 
 ## High-level Constructs
 
