--- a/es/coding/classes.html
+++ b/es/coding/classes.html
@@ -14,11 +14,11 @@ Una **clase** es un grupo de comandos aplicados a las entidades del juego: jugad
 ## Sintaxis general
 
 Sintaxis:\
-`<Class name>.<Class member>(parameters)`\
+`<nombre>.<miembro>(parametros)`\
 \
-`Class name` -  el nombre de un grupo de comandos definidos en el archivo `classes.db` para el mismo modo de edición.\
-`Class member` - uno de los comandos incluidos en la clase.\
-`Parameters` - 0 o más [parámetros](data-types.md) delimitados por comas.
+`nombre` -  el nombre de un grupo de comandos definidos en el archivo `classes.db` para el mismo modo de edición.\
+`miembro` - uno de los comandos incluidos en la clase.\
+`parametros` - 0 o más [parámetros](data-types.md) delimitados por comas.
 
 ```sb3
 Player.SetMinWantedLevel($PLAYER_CHAR, 2)
