--- a/es/coding/conditions.html
+++ b/es/coding/conditions.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <title>Conditions</title>
+  <title>Condiciones</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,58 +9,59 @@
 </head>
 <body>
 
-The `IF` operator evaluates one or more conditions and creates a new branch of code.
+El operador `IF` evalúa una o más condiciones y crea una nueva rama de código
 
-## Low-level IF statements
+## Declaraciones IF de Bajo Nivel
 
 `00d6: if <N>`\
-`<condition 1>`\
-`<condition 2>`\
+`  <condicion 1>`\
+`  <condicion 2>`\
 `...`\
-`<condition N+1>`\
-`004D: jump_if_false <label>`\
+`  <condicion N+1>`\
+`004D: jump_if_false <etiqueta>`\
 \
-`N` means the total number of conditions within the IF statement and the way the evaluation of conditions happens. 
+`N` significa el número total de condiciones dentro de la declaración IF y la forma en que ocurre la evaluación de las condiciones. 
 
 <table>
 <thead>
 <tr>
 <th>N</th>
-<th>Number of Conditions</th>
-<th>Logical Operator</th>
+<th>Número de Condiciones</th>
+<th>Operador Lógico</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td>0</td>
 <td>1</td>
-<td>the IF statement is true if the condition is true</td>
+<td>la declaración IF es verdadera (`true`) sí la condicion es verdadera</td>
 </tr>
 <tr>
 <td>1..7</td>
 <td>2..8</td>
-<td><code>AND</code> (all conditions must be true for the IF statement to be true)</td>
+<td>`AND` (todas las condiciones deben ser verdaderas para que la declaración IF sea verdadera)</td>
 </tr>
 <tr>
 <td>21..27</td>
 <td>2..8</td>
-<td><code>OR</code> (at least one of the conditions must be true for the IF statement to be true)</td>
+<td>`OR` (al menos una de las condiciones debe ser verdadera para que la declaración IF sea verdadera)</td>
 </tr>
 </tbody>
 </table>
 
 {% hint style="info" %}
-A single IF statement can contain up to 8 conditions. 
+Una declaración IF puede contener hasta 8 condiciones. 
 {% endhint %}
 
 {% hint style="info" %}
-Sanny Builder allows to omit  `0` after `IF. IF 0` and  `IF` are equivalent.
+Sanny Builder permite omitir el `0` despues del IF.\
+`IF 0` y  `IF`  son equivalentes.
 {% endhint %}
 
-- `<label>`- a name of the [label](data-types.md#labels) where script jumps if the IF statement is false.
-- `<condition>` - any conditional opcode evaluating to `true` or `false` 
+- `<etiqueta>`-  el nombre de la [etiqueta](data-types.md#labels) donde el script saltara si la declaración IF es falsa (`false`).
+- `<condicion>` - cualquier opcode condicional que evalúe como `true` o `false` 
 
-If you have the  `Conditions check` enabled in the [options](../editor/options/general.md#check-conditions), you can replace the if number with the keywords `AND` or `OR`. The compiler calculates the correct value itself.
+Si usted tiene las  `Chequeo de condiciones` habilitado en las [opciones](../editor/options/general.md#check-conditions), se puede sustituir el número si con las palabras clave `AND` y `OR`. El compilador calcula el valor correcto por sí mismo.
 
 ```sb3
 if and 
@@ -69,40 +70,37 @@ if and
 jf @anywhere
 ```
 
-The compiler writes the number `1` instead of `and`.
+El compilador escribe el número `1` en lugar de `and`.\
+\
+`IF AND` -  condiciones conectadas con el operador lógico `AND` (en reemplazo para `if 1..7`)\
+`IF OR` - condiciones conectadas con el operador lógico `OR ` (en reemplazo para `if 21..27`)
 
-- `IF AND` - conditions connected with the logical operator `AND`\
-(a replacement for `if 1..7`)
-- `IF OR` - conditions connected with the logical operator `OR `\
-(a replacement for `if 21..27`)
+## Constructores de Alto Nivel
 
-## High-level Constructs
-
-To make writing conditions easier there are high-level constructs that don't require any additional labels:\
+Para facilitar las condiciones de escritura, existen construcciones de alto nivel que no requieren etiquetas adicionales:\
 `IF <N>/AND/OR`\
-`  <condition 1>`\
-`  <condition 2>`\
+`  <condicion 1>`\
+`  <condicion 2>`\
 `  ...`\
-`  <condition N+1>`\
+`  <condicion N+1>`\
 `THEN`\
-`  <commands if the statement is true>`\
+`  <comandos sí la declaracion es verdadera>`\
 `END`
 <br><br>
 `IF <N>/AND/OR`\
-`  <condition 1>`\
-`  <condition 2>`\
+`  <condicion 1>`\
+`  <condicion 2>`\
 `  ...`\
-`  <condition N+1>`\
+`  <condicion N+1>`\
 `THEN`\
-`  <commands if the statement is true>`\
+`  <comandos sí la declaracion es verdadera>`\
 `ELSE`\
-`  <commands if the statement is false>`\
-`END`
+`  <comandos sí la declaracion es falsa>`\
+`END`\
+\
+Una condición es creada con las reglas descritas de las [condiciones de bajo nivel](conditions.md#low-level-if-statements). Después de `THEN` debe especificar los comandos que se ejecutarán si se cumple la condición. Después de `ELSE` debe especificar los comandos que se ejecutan si no se cumple la condición.
 
-.
-A condition is created by the rules described for [low-level conditions](conditions.md#low-level-if-statements). After `THEN` you have to specify the command(-s) that are executed if the condition is met. After `ELSE` you have to specify the command(-s) that are executed if the condition is not met.
-
-The `IF` statement is closed with the word `END`.
+La declaración `IF` se cierra con la palabra` END`.
 
 ```sb3
 if $var == 5
@@ -113,23 +111,23 @@ else
 end
 ```
 
-{% hint style="info" %}
-The  [`Conditions check`](../editor/options/general.md#check-conditions) option  has to be enabled.
-{% endhint %}
+:::info
+La opción de [`Chequeo de condiciones`](../editor/options/general.md#check-conditions) debe estar habilitada.
+:::
 
-{% hint style="info" %}
-Nested IF statements are supported.
-{% endhint %}
+:::info
+Se admiten declaraciones IF anidadas.
+:::
 
-## Relational Operators
+## Operadores relacionales
 
-* a **`==`** b - a is equal to b 
-* a **`>=`** b - a is greater than or equal to b 
-* a **`>`** b - a is greater than b 
-* a **`<`** b - a is less than b 
-* a **`<=`** b - a is less than or equal to b 
-* a **`<>`** b - a is not equal to b
+* A **`==`** B - A es igual a B
+* A **`>=`** B - A es mayor o igual a B
+* A **`>`** B - A es mayor que B
+* A **`<`** B - A es menor que B
+* A **`<=`** B - A es menor o igual a B
+* A **`<>`** B - A es desigual a B
 
-`a` and `b` are operands. The compiler is able to figure out an opcode if one of the operands is a number or a [string literal](data-types.md#string-literals), or both [variable' type](variables.md#var-end-construct) is known.
+`A` y` B` son operandos. El compilador puede averiguar un opcode si uno de los operandos es un número o una [cadena literaria](data-types.md#string-literals), o ambos [tipo de variables](variables.md#var-end-construct) son conocidas.
 
 <script src="../../js/main.min.js"></script>
