--- a/es/coding/data-types.html
+++ b/es/coding/data-types.html
@@ -9,116 +9,116 @@
 </head>
 <body>
 
-Certain code elements must start or end with specific characters. They help the compiler to recognize their meaning. The following list is final and contains all types of data known to the compiler.  
+Ciertos elementos de código deben comenzar o terminar con caracteres específicos. Ayudan al compilador a reconocer su significado. La siguiente lista contiene todos los tipos de datos conocidos por el compilador.  
 
 ## Variables
 
-A [global variable](variables.md#global-variables) starts with `$` followed by a valid identifier (any combination of letters, digits and `_`).
+Una [variable global](variables.md#global-variables) comienza con `$` seguido de un identificador válido (cualquier combinación de letras, dígitos y `_`).
 
 ```sb3
 0004: $MyVar = 100
 ```
 
-A [local variable](variables.md#local-variables) name may only be a number followed by `@`.  The number is the local variable index in the list of local variables [allocated](../scm-documentation/gta-limits.md) to this script or a mission.
+Una [variable local](variables.md#local-variables) como nombre solo puede tener un número seguido de `@`. El número es el índice de variable local en la lista de variables locales [asignadas](../scm-documentation/gta-limits.md) a este script o una misión.
 
 ```sb3
 0006: 100@ = 10
 ```
 
-An `ADMA` (**A**dvanced **D**irect **M**emory **A**ccess) variable is a reference to an address within in the `main.scm` file. They serve as global variables, i.e. you can read from and write to the address in the `main.scm`. 
+Una variable `ADMA` (**A**dvanced **D**irect **M**emory **A**ccess) es una referencia al desplazamiento en el archivo `main.scm`. Sirven como variables globales, es decir, se puede leer y escribir en una dirección en `main.scm`. 
 
 ```sb3
-$myVar = &0 // read first 4 bytes of the main.scm (&0) and write the value to $myVar
-&57 += &120(&231,4i) // can be used as an array element
+$myVar = &0 // leer los primeros 4 bytes de main.scm (&0) y escribir el valor en $myVar
+&57 += &120(&231,4i) // Se puede utilizar como elemento de un arreglo
 ```
 
-`ADMA` variables don't affect the size of the global variables space in the `main.scm` header.
+Las variables `ADMA` no afectan al tamaño del espacio de variables globales en el encabezado `main.scm`.
 
-## Labels
+## Etiquetas
 
-Labels are used to reference the code location from unconditional (opcodes `0002`, `0050`) or conditional jumps (opcode `004D`). They start with `:`followed by a valid identifier (a label name).
+Las etiquetas se utilizan para hacer referencia a la ubicación del código desde incondicionales (opcode `0002`, `0050`) o saltos condicionales (opcode `004D`). Empiezan con `:` seguido de un identificador válido (un nombre de etiqueta).
 
 ```sb3
 :MyLabel
 ```
 
-To reference the label from an opcode use `@`  and then write the label name.
+Para referenciar la etiqueta desde un opcode, utilice el `@` y, a continuación, escriba el nombre de la etiqueta.
 
 ```sb3
 0002: jump @MyLabel
 ```
 
-If a label name is written as a standalone statement followed by `()`  it represents a call to the subroutine with the `gosub` command:
+Si el nombre de una etiqueta se escribe como una declaración independiente seguida de `()` representa una llamada de subrutina con el comando `gosub`:
 
 ```sb3
-// the following statements are equivalent
+// Las siguientes declaraciones son equivalentes
 MyLabel()
 gosub @MyLabel
 ```
 
-## String literals
+## Cadenas literarias
 
-A text enclosed between single quotes `' '` is a short string literal (`15` characters max).
+Un texto encerrado entre comillas simples `''` es un literal de cadena corta (`15` caracteres como máximo).
 
 ```sb3
 03A4: script_name 'MAIN'
 ```
 
-Blank strings are also allowed: `' '`.
+También se permiten las cadenas en blanco: `' '`.
 
-A text enclosed between `" "` is a long string literal (maximum length is determined by the opcode it uses)
+Un texto encerrado entre `" "` es un literal de cadena larga (la longitud máxima está determinada por el código de operación que usa)
 
-If the literal contains `"` you must write `\` before it.
+Si el literal contiene `"` debes escribir `\` antes.
 
 ```sb3
 0662: write_debug_message "Hello, \"world\"! \n 'Here we go!'"
 ```
 
-Blank strings are also allowed: `" "`.
+También se permiten las cadenas en blanco: `" "`.
 
-## String Variables
+## Variables de Cadenas
 
-A global variable containing a short string literal starts with `s$`.
+Una variable global que contiene una cadena corta se inicia con `s$`.
 
 ```sb3
 05A9: s$MyString = 'GLOBAL'
 ```
 
-A local variable containing a short string literal starts with`@s`. 
+Una variable local que contiene una cadena corta se inicia con `@s`. 
 
 ```sb3
 05AA: 1@s = 'LOCAL'
 ```
 
-A global variable containing a long string literal starts with `v$`. 
+Una variable global que contiene una cadena larga se inicia con `v$`. 
 
 ```sb3
 06D1: v$MyString = "LONG_GLOBAL"
 ```
 
-A local variable containing a long string literal starts with`@v`. 
+Una variable local que contiene una cadena larga se inicia con `@v`. 
 
 ```sb3
 06D2: 1@v = "LONG_LOCAL"
 ```
 
-## Model Names
+## Nombres de Modelos
 
-Models defined in `.ide` files can be referenced by`#` followed by the model name. 
+Los modelos definidos en los archivos `.ide`, pueden ser referenciados con `#` seguido de su nombre. 
 
 ```sb3
 0247: request_model #CELLPHONE
 ```
 
-## Hexadecimal Numbers
+## Numeros Hexadecimales
 
-`0x` - a hexadecimal number \
-`-0x` - a negative hexadecimal number
+`0x` - positivo\
+`-0x` - negativo
 
 ```sb3
 0004: $var = -0xBB08
 ```
 
-A hexadecimal number has to be within the `-80000000..7FFFFFFF` range.
+Un número hexadecimal debe estar dentro del rango `-80000000..7FFFFFFF`.
 
 <script src="../../js/main.min.js"></script>
